--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>HOC 2020</title>
+		<title>example website LLLLLL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>DHS HOC 2020!</h1>
-						<p>Learn how to create an awesome website, just like this one using a template<br />
+						<span class="logo"><img src="https://pbs.twimg.com/media/D7ShRPYXoAA-XXB.jpg" alt="" /></span>
+						<h1>absahluteleh pogguhs!</h1>
+						<p>I hope that linus tech tip image works...<br />
 						built by <a href="https://html5up.net">HTML5 UP</a>, and Github pages.</p>
 					</header>
 
