--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="https://pbs.twimg.com/media/D7ShRPYXoAA-XXB.jpg" alt="" /></span>
 						<h1>absahluteleh pogguhs!</h1>
-						<p>I hope that linus tech tip image works...<br />
+						<p>Linsu TECH TIPPSPSPPSPSP<br />
 						built by <a href="https://html5up.net">HTML5 UP</a>, and Github pages.</p>
 					</header>
 
@@ -43,42 +43,42 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Welcome to the DHS Hour of Code 2020</h2>
+											<h2>Welcome to the linus tech tips cool site</h2>
 										</header>
-										<p>This year programming club wanted to create a fun and aproachable activity that would allow you to have a tangiable end result, so we decided to teach HTML with Github pages so that you could create an awesome website to showcase your highschool accomplishments.</p>
+										<p>This year is the year of the Linus (tech tip)</p>
 										<ul class="actions">
-											<li><a href="#first" class="button">Get Started!</a></li>
+											<li><a href="#first" class="button">LInUS Button!!!</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/html.png" alt="" /></span>
+									<span class="image"><img src="https://i.redd.it/kfqd5pyy7ep31.jpg" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Getting Started</h2>
+									<h2>what the linuS!</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon brands major fa-github "></span>
-										<h3>Step 1: Setting up Github</h3>
-										<p>Start by creating a free github account. After you do this click the link bellow to copy our starting code.</p>
+										<h3>linus</h3>
+										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Step 2: CODE!</h3>
-										<p>Follow our guide to code your website into something unique.</p>
+										<h3>TECH</h3>
+										<p>man</p>
 									</li>
 									<li>
 										<span class="fa icon solid major fa-laptop"></span>
-										<h3>Step 3: Launch your Website</h3>
-										<p>Use Github pages to publish your brand new website onto the internet.</p>
+										<h3>Step 3: TIPS!</h3>
+										<p> woah.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://github.com/dhs-programming-club/HOC2020_HTML_Github_Pages_Template" class="button">Example Code</a></li>
+										<li><a href="https://linustechtips.com/" class="button">Example Code</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -87,8 +87,8 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Video Guide</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>guys ther e was some lorem ipsum herwe WWHAHT DO IT DO aah im so scared />
+									linus tech tips linues lineus tech tipsspspsp lale hhhheeehehehehehe.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
