--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://linustechtips.com/" class="button">Example Code</a></li>
+										<li><a href="https://linustechtips.com/" class="button">linus fan club forums</a></li>
 									</ul>
 								</footer>
 							</section>
