--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="https://i.redd.it/zbj0h3ww82361.png"></span>
+										<span class="icon https://i.redd.it/zbj0h3ww82361.png"></span>
 										<h3>linus</h3>
 										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
 									</li>
