--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon https://i.redd.it/zbj0h3ww82361.png"></span>
+										<span class="image"><img src="https://i.redd.it/zbj0h3ww82361.png" alt="" /></span>
+										<span class="icon "></span>
 										<h3>linus</h3>
 										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
 									</li>
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="image"><img src="https://i.redd.it/kfqd5pyy7ep31.jpg" alt="" /></span>
 										<h3>TECH</h3>
-										<p>man</p>
+										<p>man </p>
 									</li>
 									<li>
 										<span class="fa icon solid major fa-laptop"></span>
@@ -108,7 +109,7 @@
 										<strong>4,096</strong> intel more like cringtel
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
+										<span class="image"><img src="https://i.ytimg.com/vi/dkWjvAc0jLQ/maxresdefault.jpg" alt="" /></span>
 										<strong>1,024</strong> linus vs twomad cool pc build battle
 									</li>
 								</ul>
@@ -143,7 +144,7 @@
 							<h2>Made by DHS Programming Club</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
 							<ul class="actions">
-								<li><a href="https://www.youtube.com/channel/UCXuqSBlHAE6Xw-yeJA0Tunw" class="button">the real linus teachn TIP!!!!1!!</a></li>
+								<li><a href="https://www.youtube.com/watch?v=0vp_4vc-btI" class="button">linus tek tips fansmade theme let go!!!</a></li>
 							</ul>
 						</section>
 						<section>
