--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
 									</li>
 									<li>
-										<span class="image"><img src="https://i.redd.it/kfqd5pyy7ep31.jpg" alt="" /></span>
+										<span class="image"><img src="https://thumbs.gfycat.com/DearScentedElephantseal-max-1mb.gif" alt="" /></span>
 										<h3>TECH</h3>
-										<p>man </p>
+										<p>man this is me when linus tech the tips</p>
 									</li>
 									<li>
 										<span class="fa icon solid major fa-laptop"></span>
