--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="https://i.redd.it/zbj0h3ww82361.png" alt="" /></span>
+										<span class="image"><img src="https://i.redd.it/zbj0h3ww82361.png" width="20" height="20" alt="" /></span>
 										<span class="icon "></span>
 										<h3>linus</h3>
 										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
@@ -87,7 +87,7 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Video Guide</h2>
+									<h2>guys did tou know linus tech tips backwards is actually spit hcet sunil???</h2>
 									<p>guys ther e was some lorem ipsum herwe WWHAHT DO IT DO aah im so scared />
 									linus tech tips linues lineus tech tipsspspsp lale hhhheeehehehehehe.</p>
 								</header>
