--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="image"><img src="https://i.redd.it/zbj0h3ww82361.png" width="20" height="20" alt="" /></span>
+										<span class="image"><img src="https://i.redd.it/zbj0h3ww82361.png" width="100" height="100" alt="" /></span>
 										<span class="icon "></span>
 										<h3>linus</h3>
 										<p>owoosoaoasooahh Linsu i tehc tiops is reALL!???</p>
@@ -109,7 +109,7 @@
 										<strong>4,096</strong> intel more like cringtel
 									</li>
 									<li class="style5">
-										<span class="image"><img src="https://i.ytimg.com/vi/dkWjvAc0jLQ/maxresdefault.jpg" alt="" /></span>
+										<span class="image"><img src="https://i.ytimg.com/vi/dkWjvAc0jLQ/maxresdefault.jpg" width="200" height="125" alt="" /></span>
 										<strong>1,024</strong> linus vs twomad cool pc build battle
 									</li>
 								</ul>
