--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
+										<span class="image"><img src="https://i.redd.it/y5i014rmryo41.jpg" width="200" height="200" alt="" /></span>
 										<strong>5,120</strong> linus video...
 									</li>
 									<li class="style2">
@@ -113,7 +113,31 @@
 										<strong>1,024</strong> linus vs twomad cool pc build battle
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content"> Standing here                                                                                                                                           
+I realize
+You are just like me
+Trying to make history
+
+But who’s to judge
+The right from wrong
+When our guard is down
+I think we’ll both agree
+
+That violence breeds violence
+But in the end it has to be this way
+
+I’ve carved my own path
+You followed your wrath
+But maybe we’re both the same
+
+The world has turned
+And so many have burned
+But nobody is to blame
+
+Yet staring across this barren wasted land
+I feel new life will be born
+Beneath the blood stained sand
+Beneath the blood stained sand</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://www.reddit.com/r/LinusTechTips/" class="button">bruh l;ineus!!???? what,</a></li>
@@ -125,8 +149,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Additional Resources</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>wgats up ghuys rela linu stecks tips here no youre not real yes i a ma look im so real ill right down my namwe lines oh wow i guess tou rae real tehen cso cool huys real lineus</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
