--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 						<span class="logo"><img src="https://pbs.twimg.com/media/D7ShRPYXoAA-XXB.jpg" alt="" /></span>
 						<h1>absahluteleh pogguhs!</h1>
 						<p>Linsu TECH TIPPSPSPPSPSP<br />
-						built by <a href="https://html5up.net">HTML5 UP</a>, and Github pages.</p>
+						built by me (creator of the websiote</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Getting Started</a></li>
-							<li><a href="#second">The Video</a></li>
-							<li><a href="#cta">Additional Resources</a></li>
+							<li><a href="#intro" class="active">the epic( line us?)</a></li>
+							<li><a href="#first">cover yourself in tech tips</a></li>
+							<li><a href="#second">funny numbahs</a></li>
+							<li><a href="#cta">meat linis!</a></li>
 						</ul>
 					</nav>
 
@@ -148,12 +148,12 @@ Beneath the blood stained sand</p>
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Additional Resources</h2>
+									<h2>woah guys look i dfoun linus!!!!!!!!!!!!!!!</h2>
 									<p>wgats up ghuys rela linu stecks tips here no youre not real yes i a ma look im so real ill right down my namwe lines oh wow i guess tou rae real tehen cso cool huys real lineus</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="elements.html" class="button primary">Get Started</a></li>
+										<li><a href="https://i.ytimg.com/vi/hAsZCTL__lo/mqdefault.jpg" class="button primary">a funy linus pirture i forgot to add</a></li>
 										<li><a href="https://www.youtube.com/channel/UCXuqSBlHAE6Xw-yeJA0Tunw" class="button">the real linus teachn TIP!!!!1!!</a></li>
 									</ul>
 								</footer>
@@ -164,8 +164,8 @@ Beneath the blood stained sand</p>
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Made by DHS Programming Club</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Made by me an epuic guy at school!</h2>
+							<p>lorem ipsum WeirdChamp i dont like it ...d lll</p>
 							<ul class="actions">
 								<li><a href="https://www.youtube.com/watch?v=0vp_4vc-btI" class="button">linus tek tips fansmade theme let go!!!</a></li>
 							</ul>
@@ -174,11 +174,11 @@ Beneath the blood stained sand</p>
 							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>5664 Crawforsville Rd &bull; Speedway, IN 46224 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(i dont have teli phone yet i hope i gety one for my fourth burt hday</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="#">hoffmanp@darienps.org</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
