--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Beneath the blood stained sand</p>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>my p[ersonal informatiom!!! :emoji_24:</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>5664 Crawforsville Rd &bull; Speedway, IN 46224 &bull; USA</dd>
