--- a/index.html
+++ b/index.html
@@ -115,29 +115,29 @@
 								</ul>
 								<p class="content"> Standing here                                                                                                                                           
 I realize
-You are just like me
-Trying to make history
+TETRIS are just like TECH TIPS
+Trying to make me breathless
 
 But who’s to judge
-The right from wrong
+The TETRIS from TECH TIPS
 When our guard is down
 I think we’ll both agree
 
-That violence breeds violence
+That TETRIS breeds TECH TIPS
 But in the end it has to be this way
 
-I’ve carved my own path
-You followed your wrath
-But maybe we’re both the same
+I’ve carved my own TETRIS
+You followed your TECH TIPS
+But maybe we’re both restless
 
-The world has turned
-And so many have burned
-But nobody is to blame
+The world has TETRIS
+And so many have TECH TIPS
+But nobody is arrested
 
-Yet staring across this barren wasted land
-I feel new life will be born
-Beneath the blood stained sand
-Beneath the blood stained sand</p>
+Yet staring across this barren wasted TECH TIPS
+I feel new life will be TETRIS
+Beneath the blood stained lettuce
+Beneath the blood stained lettuce</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://www.reddit.com/r/LinusTechTips/" class="button">bruh l;ineus!!???? what,</a></li>
